--- a/blogpost5.html
+++ b/blogpost5.html
@@ -181,7 +181,7 @@ Kærlig hilsen, Nina
           <h3>Certificeringer</h3>
           <img
             id="dpf_logo"
-            src="assets/images_website/DAF-logo.png"
+            src="assets/images_website/DAF-logo.png" srcset="assets/images_website/webp/DAF-logo.webp"
             alt="Dansk Psykolog Forening logoet"
             loading="lazy"
           />
