--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
   
   <div id="growthrings"></div>
 <div id="lettertonina_div">
-  <img src="assets/images_website/letter.png" alt="Illsutration af et brev" class="lettertonina" loading="lazy">
+  <img src="assets/images_website/letter.png" srcset="assets/images_website/webp/letter.webp" alt="Illsutration af et brev" class="lettertonina" loading="lazy">
 <p class="text_letter">Skriv gerne til <u>admin@psykologninahestbech.dk</u> hvis du har nogle spørgsmål. </p></div>
 
 
@@ -243,11 +243,11 @@
         <div id="credentials_box">
           <h4>Certificeringer</h4>
           <img
-            id="dpf_logo"
-            src="assets/images_website/DAF-logo.png"
-            alt="Dansk Psykolog Forening logoet"
-            loading="lazy"
-          />
+          id="dpf_logo"
+          src="assets/images_website/DAF-logo.png" srcset="assets/images_website/webp/DAF-logo.webp"
+          alt="Dansk Psykolog Forening logoet"
+          loading="lazy"
+        />
         </div>
       </div>
     </footer>
