--- a/praktisk.html
+++ b/praktisk.html
@@ -168,7 +168,7 @@
           <h3>Certificeringer</h3>
           <img
             id="dpf_logo"
-            src="assets/images_website/DAF-logo.png"
+            src="assets/images_website/DAF-logo.png" srcset="assets/images_website/webp/DAF-logo.webp"
             alt="Dansk Psykolog Forening logoet"
             loading="lazy"
           />
