--- a/terapiformer.html
+++ b/terapiformer.html
@@ -206,11 +206,11 @@
         <div id="credentials_box">
           <h3>Certificeringer</h3>
           <img
-            id="dpf_logo"
-            src="assets/images_website/DAF-logo.png"
-            alt="Dansk Psykolog Forening logoet"
-            loading="lazy"
-          />
+          id="dpf_logo"
+          src="assets/images_website/DAF-logo.png" srcset="assets/images_website/webp/DAF-logo.webp"
+          alt="Dansk Psykolog Forening logoet"
+          loading="lazy"
+        />
         </div>
       </div>
     </footer>
