--- a/blogpost3.html
+++ b/blogpost3.html
@@ -85,7 +85,7 @@
                     <a class="dropdown-item" href="praktisk.html#afbestilling">Afbestilling</a>
                   </li>
                   <li>
-                    <a class="dropdown-item" href="praktisk.html#utilsigtet">Utilsigtede hendelser</a>
+                    <a class="dropdown-item" href="praktisk.html#utilsigtet">Utilsigtede hændelser</a>
                   </li>
                   <li>
                     <a class="dropdown-item" href="om_mig.html#kontakt">Kontakt</a>
@@ -185,7 +185,7 @@ Det var lidt råd til at starte med at meditere. Husk at det er en “praksis”
           <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2154.0959230201665!2d12.504676315685627!3d55.65750600680566!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x465253ed73da190b%3A0x63d843aca3ba635b!2sPSYKOLOGHUSET%20Hestbech!5e1!3m2!1sen!2sdk!4v1638799609212!5m2!1sen!2sdk" width="300" height="250" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
         </div>
         <div id="credentials_box">
-          <h3>Certificeringer</h3>
+          <h3>Medlem af</h3>
           <img
           id="dpf_logo"
           src="assets/images_website/DAF-logo.png" srcset="assets/images_website/webp/DAF-logo.webp"
