--- a/blogpost5.html
+++ b/blogpost5.html
@@ -83,7 +83,7 @@
                     <a class="dropdown-item" href="praktisk.html#afbestilling">Afbestilling</a>
                   </li>
                   <li>
-                    <a class="dropdown-item" href="praktisk.html#utilsigtet">Utilsigtede hendelser</a>
+                    <a class="dropdown-item" href="praktisk.html#utilsigtet">Utilsigtede hændelser</a>
                   </li>
                   <li>
                     <a class="dropdown-item" href="om_mig.html#kontakt">Kontakt</a>
@@ -113,7 +113,7 @@
           
           Det kan være så svært at tænke positive tanker om sig selv. Af en eller anden årsag kommer det meget mere naturligt for mange af os at forstille os det værst tænkelige om os selv og være ekstra hårde mod os selv hvis vi dummer os eller siger noget forkert. 
 <br><br>
-Man kan godt blive godt træt af at det skal fylde så meget i hverdagen, men på den anden side kan et føles noget nær umuligt at ændre på tankemønsteret. Og det er der faktisk gode grunde til. Hvis man er en af dem der tror på evolutionspsykologi, vil man mene at det er fordi at det at skille sig ud fra flokken og chancen for afvisning havde store sociale og overlevelsesmæssige konsekvenser. Og det viser sig når vi oplever at det kan føles helt frygtindgydende og liv og død agtigt. Vi er jo nemlig en social art og derfor er det altså helt normalt at gå op i hvad andre tænker.
+Man kan godt blive godt træt af at det skal fylde så meget i hverdagen, men på den anden side kan et føles noget nær umuligt at ændre på tankemønsteret. Og det er der faktisk gode grunde til. Hvis man er en af dem der tror på evolutionspsykologi, vil man mene at det er fordi at det at skille sig ud fra flokken og chancen for afvisning havde store sociale og overlevelsesmæssige konsekvenser. Og det viser sig når vi oplever at det kan føles helt frygtindgydende og liv-og død-agtigt. Vi er jo nemlig en social art og derfor er det altså helt normalt at gå op i hvad andre tænker.
 <br><br>
 Men det er ikke hensigtmæssigt at det påvirker os så meget at vi går og er kede af det og der er der altså nogle ting vi kan gøre for at det ikke fylder helt så meget.<br>
 Mange af os kan måske skrive under på at det er blevet bedre med alderen og at det vi manglede mest af alt i de unge 20’ere var perspektiv og viden om at vi ikke behøver at være perfekte. Men derfor kan det jo godt stadig komme snigende alligevel en gang i mellem.
@@ -178,7 +178,7 @@ Kærlig hilsen, Nina
           <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2154.0959230201665!2d12.504676315685627!3d55.65750600680566!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x465253ed73da190b%3A0x63d843aca3ba635b!2sPSYKOLOGHUSET%20Hestbech!5e1!3m2!1sen!2sdk!4v1638799609212!5m2!1sen!2sdk" width="300" height="250" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
         </div>
         <div id="credentials_box">
-          <h3>Certificeringer</h3>
+          <h3>Medlem af</h3>
           <img
             id="dpf_logo"
             src="assets/images_website/DAF-logo.png" srcset="assets/images_website/webp/DAF-logo.webp"
