--- a/blogpost6.html
+++ b/blogpost6.html
@@ -83,7 +83,7 @@
                     <a class="dropdown-item" href="praktisk.html#afbestilling">Afbestilling</a>
                   </li>
                   <li>
-                    <a class="dropdown-item" href="praktisk.html#utilsigtet">Utilsigtede hendelser</a>
+                    <a class="dropdown-item" href="praktisk.html#utilsigtet">Utilsigtede hændelser</a>
                   </li>
                   <li>
                     <a class="dropdown-item" href="om_mig.html#kontakt">Kontakt</a>
@@ -114,9 +114,9 @@
             Skam er et af de ord der har fået mere plads de seneste år. Og med god grund. Vi har alle skam og tit styrer den vores liv, mere end vi ved. Det er nemlig en af de ting der er rigtig ubehageligt at tænke på og derfor undgår vi det. Men uden at vi lægger mærke til det, sætter den sit aftryk på vores relationer, arbejde, selvværd, sundhed, osv.
 Så her er 3 ting at vide om skam: 
 <br><br>
-<b>Vi kan ikke lide at snakke om skam:</b> Som sagt er det super ubehageligt at tænke på vores skam. Skam kommer ofte af at vi i barndommen har lært at visse aspekter af os er forkerte og derfor kan det minde os om afvisning at tænke på. Nogengange kan det endda føles frygtindgydende at komme til at tænke på noget vi skammer os over. Og derfor har det heller ikke før nu haft en plads i samfundsdebatten. Vi undgår tit de taboobelagte emner.
+<b>Vi kan ikke lide at snakke om skam:</b> Som sagt er det super ubehageligt at tænke på vores skam. Skam kommer ofte af at vi i barndommen har lært at visse aspekter af os er forkerte og derfor kan det minde os om afvisning at tænke på. Nogengange kan det endda føles frygtindgydende at komme til at tænke på noget vi skammer os over. Og derfor har det heller ikke før nu haft en plads i samfundsdebatten. Vi undgår tit de tabubelagte emner.
 <br><br>
-<b>Skam vs. skyld:</b> Det er ikke mange der tænker over det, men der er forskel på skyld og skam. Skyld er nemlig “jeg har gjort noget forkert”, hvor skam er “jeg er forkert”. Et eksempel kan være at du skal stå for flæskestegen juleaften, men kommer til at brænde den på. Hvis du med det samme tænker “hvor er jeg dog en idiot”, kan det være at det er din skam der snakker. Hvid du derimod tænker “det var godt nok uheldigt gjort”, siger det ikke noget om dit værd som person og er højst sandsynligt sin skyld der snakker.
+<b>Skam vs. skyld:</b> Det er ikke mange der tænker over det, men der er forskel på skyld og skam. Skyld er nemlig “jeg har gjort noget forkert”, hvor skam er “jeg er forkert”. Et eksempel kan være at du skal stå for flæskestegen juleaften, men kommer til at brænde den på. Hvis du med det samme tænker “hvor er jeg dog en idiot”, kan det være at det er din skam der snakker. Hvis du derimod tænker “det var godt nok uheldigt gjort”, siger det ikke noget om dit værd som person og er højst sandsynligt din skyld der snakker.
 <br><br>
 <b>Hvis du ikke håndterer din skam, håndterer den dig:</b> Som nævnt ovenfor, undgår vi at se vores skam i øjnene så meget som vi kan, f eks ved at se fjernsyn eller spise eller andet. Det kender jeg i hvertfald fra både klienters og mit eget liv at man kan komme til. Men det er faktisk sådan at skam har en indflydelse på vores liv om vi vil det eller ej. Et eksempel er, hvis en kollega giver os konstruktiv feedback og vi kan mærke at vi bliver provokererede af det. Det provokerer os fordi vi bliver bange for at det betyder at vi ikke gør vores arbejde godt nok, hvilket kan føles som om at det er fordi vi ikke er gode nok helt ind i kernen. Dette er blot et eksempel på hvordan skam sidder bag rettet i vores hverdag.
 <br><br>
@@ -169,7 +169,7 @@ Kærlig hilsen, Nina
           <h3>Adresse</h3>
           <p>
 
-            Høfdingsvej 34
+            Høffdingsvej 34
             <br>
             2500 Valby
             <br>
@@ -178,7 +178,7 @@ Kærlig hilsen, Nina
           <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2154.0959230201665!2d12.504676315685627!3d55.65750600680566!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x465253ed73da190b%3A0x63d843aca3ba635b!2sPSYKOLOGHUSET%20Hestbech!5e1!3m2!1sen!2sdk!4v1638799609212!5m2!1sen!2sdk" width="300" height="250" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
         </div>
         <div id="credentials_box">
-          <h3>Certificeringer</h3>
+          <h3>Medlem af</h3>
           <img
           id="dpf_logo"
           src="assets/images_website/DAF-logo.png" srcset="assets/images_website/webp/DAF-logo.webp"
