--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                     <a class="dropdown-item" href="praktisk.html#afbestilling">Afbestilling</a>
                   </li>
                   <li>
-                    <a class="dropdown-item" href="praktisk.html#utilsigtet">Utilsigtede hendelser</a>
+                    <a class="dropdown-item" href="praktisk.html#utilsigtet">Utilsigtede hændelser</a>
                   </li>
                   <li>
                     <a class="dropdown-item" href="om_mig.html#kontakt">Kontakt</a>
@@ -112,9 +112,9 @@
   <h2 class="intro_header">Psykolog Nina Hestbech,<span class="small_text"> Cand. Psyk</span></h2>
   <p class="intro_text">Vi bakser alle med noget til tider og går i gennem perioder der er mere udfordrende end andre. Om det er en langtrukken skilsmisse, dysfunktionelle familierelationer eller et lavt selvværd der spænder ben for vores drømme og velvære, så kommer vi alle ud for det før eller siden. Jeg tror på at der ingen skam er i at bede om hjælp og at man hellere skal gøre det før end senere, trods det uden tvivl, kan være et rigtigt skræmmende skridt at tage.
 <br><br>
-    Jeg er autoriseret psykolog, med ydrenummer og min egen praksis i Valby, som jeg har haft siden 2008. Med en blanding af kognitive metoder og redskaber fra Buddismen og mindfulness, samt en empatisk og medmenneskelig tilgang til terapi, har jeg efterhåndet hjulpet en håndfuld klienter gennem årene og jeg sætter stor pris på den tillid og mod som de hver især har vist. Det er nemlig ofte mest skræmmende lige op til at man tager springet.
+    Jeg er autoriseret psykolog, med ydernummer og min egen praksis i Valby, som jeg har haft siden 2008. Med en blanding af kognitive metoder og redskaber fra Buddismen og mindfulness, samt en empatisk og medmenneskelig tilgang til terapi, har jeg efterhåndet hjulpet en hel del klienter gennem årene og jeg sætter stor pris på den tillid og mod som de hver især har vist. Det er nemlig ofte mest skræmmende lige op til at man tager springet.
     <br><br>
-    Du er velkommen til at snuse lidt rundt på siden og læse om hvilke terapiformer jeg arbejder med, hvilke problematikker jeg har erfaring med og selvfølgelig det helt lavpraktisk som priser, tilskud og kontaktoplysninger.</p>
+    Du er velkommen til at snuse lidt rundt på siden og læse om hvilke terapiformer jeg arbejder med, hvilke problematikker jeg har erfaring med og selvfølgelig det helt lavpraktiske som priser, tilskud og kontaktoplysninger.</p>
 
     <img src="assets/images_website/kærlighilsen1.png" alt="Gif der viser ordene 'kærlig hilsen, Nina'" loop="infinite" loading="lazy">
 </div>
@@ -123,15 +123,15 @@
 <div id="problemer">
   <div class="problems">
     <h2 class="problemer_h2">Hvad kan jeg hjælpe med?</h2>
-    <p>I mine år som psykolog har jeg haft erfaring med er bred vifte af problemstillinger. Gennem mit ydrenummer har jeg især arbejdet med angst, stress og depression, samt uforudsete hændelser, som for eksempel pludselig sygdom eller dødsfald. Jeg har også erfaring med at hjælpe folk, der har svært ved at mærke, forstå og udtrykke deres egne behov, på en måde, så de trives med sig selv og i deres liv og relationer. Tit er det de samme følelser der rammer os på tværs af de udfordringer som vi oplever, så som sorg, frygt, ensomhed, skam, skyld, osv. Derfor har jeg mere fokus på terapiformer end problemstillinger. Så tag endelig kontakt, hvis du har nogle spørgsmål. </p>
+    <p>I mine år som psykolog har jeg haft erfaring med en bred vifte af problemstillinger. Gennem mit ydernummer har jeg især arbejdet med angst, stress og depression, samt uforudsete hændelser, som for eksempel pludselig sygdom eller dødsfald. Jeg har også erfaring med at hjælpe folk, der har svært ved at mærke, forstå og udtrykke deres egne behov, på en måde, så de trives med sig selv og i deres liv og relationer. Tit er det de samme følelser, der rammer os på tværs af de udfordringer som vi oplever, så som sorg, frygt, ensomhed, skam, skyld, osv. Derfor har jeg mere fokus på terapiformer end problemstillinger. Så tag endelig kontakt, hvis du har nogle spørgsmål. </p>
 </div>
 </div>
 <div id="fredagsmail">
   <h2>Fredagsmailen</h2>
-  <p>Med Fredagsmailen  kan du være  med til at læse de nyeste blogindlæg og få spænende indsigter i det nyheder fra psykologiverdenen. 
+  <p>Med Fredagsmailen  kan du være  med til at læse de nyeste blogindlæg og få spændende indsigter i nyheder fra psykologiverdenen. 
   <br>
   <br>
-    Du modtager også en begynder meditation der er perfekt til os der synes at meditation kan være så træls at overskue of komme i gang med.</p>
+    Du modtager også en begyndermeditation, der er perfekt til os, der synes at meditation kan være så træls at overskue at komme i gang med.</p>
   <form class="form_div">
     <label for="fname"></label><br>
     <input type="text" id="fname" name="fname" placeholder="Fornavn"><br>
@@ -148,7 +148,7 @@
   <div id="growthrings"></div>
 <div id="lettertonina_div">
   <img src="assets/images_website/letter.png" srcset="assets/images_website/webp/letter.webp" alt="Illsutration af et brev" class="lettertonina" loading="lazy">
-<p class="text_letter">Skriv gerne til <u>admin@psykologninahestbech.dk</u> hvis du har nogle spørgsmål. </p></div>
+<p class="text_letter">Skriv gerne til <u>admin@psykologninahestbech.dk</u>, hvis du har nogle spørgsmål. </p></div>
 
 
 
@@ -180,7 +180,7 @@
 
       
  
-        <p>“Jeg har gået hos Nina i halvandet år, siden min mand døde af kræft for to år siden. Det har været et emotionelt helvede og jeg kommer mig aldrig helt over det, men med Nina’s redskaber har jeg formået at få min hverdag tilbage og de negative tanker fylder meget mindre. Nu glæder jeg mig mest over de mind vi nåede at have sammen.”</p>
+        <p>“Jeg har gået hos Nina i halvandet år, siden min mand døde af kræft for to år siden. Det har været et emotionelt helvede og jeg kommer mig aldrig helt over det, men med Nina’s redskaber har jeg formået at få min hverdag tilbage og de negative tanker fylder meget mindre. Nu glæder jeg mig mest over de minder vi nåede at have sammen.”</p>
         <h4>Kirsten, 62 år</h4>
     </div>
     <div class="carousel-item">
@@ -194,7 +194,7 @@
 
 
 
-        <p>“Jeg har drømt om at starte min egen smykkeforetning siden jeg var helt lille, men har aldrig turde at gøre det. Da jeg fyldte 40, besluttede jeg at der skulle ske noget, så jeg kontaktede en psykolog. Jeg har stadig ikke startet virksomheden, men efter at have gået hos Nina i 7 måneder, har jeg endelig sagt mit job op. Det var dog det mest skræmmende jeg nogensinde har gjort, men det føles godt at lytte lidt til mig selv. Og at lytte til mig selv må siges at være det vigtigeste jeg har lært hos Nina. Jeg øver mig stadig i det.”</p>
+        <p>“Jeg har drømt om at starte min egen smykkeforretning siden jeg var helt lille, men har aldrig turde at gøre det. Da jeg fyldte 40, besluttede jeg at der skulle ske noget, så jeg kontaktede en psykolog. Jeg har stadig ikke startet virksomheden, men efter at have gået hos Nina i 7 måneder, har jeg endelig sagt mit job op. Det var dog det mest skræmmende jeg nogensinde har gjort, men det føles godt at lytte lidt til mig selv. Og at lytte til mig selv må siges at være det vigtigeste jeg har lært hos Nina. Jeg øver mig stadig i det.”</p>
         <h4>Birgitte, 41 år</h4>
     </div>
   </div>
@@ -217,7 +217,7 @@
       <div id="footer">
         
         <div id="kontakt_box">
-          <h4>Kontakt os</h4>
+          <h3>Kontakt os</h3>
           <p>
             Psykolog Nina Hestbech
             <br />
@@ -229,10 +229,10 @@
           </p>
         </div>
         <div id="adresse_box">
-          <h4>Adresse</h4>
+          <h3>Adresse</h3>
           <p>
 
-            Høfdingsvej 34
+            Høffdingsvej 34
             <br>
             2500 Valby
             <br>
@@ -241,7 +241,7 @@
           <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2154.0959230201665!2d12.504676315685627!3d55.65750600680566!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x465253ed73da190b%3A0x63d843aca3ba635b!2sPSYKOLOGHUSET%20Hestbech!5e1!3m2!1sen!2sdk!4v1638799609212!5m2!1sen!2sdk" width="300" height="250" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
         </div>
         <div id="credentials_box">
-          <h4>Certificeringer</h4>
+          <h3>Medlem af</h3>
           <img
           id="dpf_logo"
           src="assets/images_website/DAF-logo.png" srcset="assets/images_website/webp/DAF-logo.webp"
