--- a/om_mig.html
+++ b/om_mig.html
@@ -83,7 +83,7 @@
                     <a class="dropdown-item" href="praktisk.html#afbestilling">Afbestilling</a>
                   </li>
                   <li>
-                    <a class="dropdown-item" href="praktisk.html#utilsigtet">Utilsigtede hendelser</a>
+                    <a class="dropdown-item" href="praktisk.html#utilsigtet">Utilsigtede hændelser</a>
                   </li>
                   <li>
                     <a class="dropdown-item" href="om_mig.html#kontakt">Kontakt</a>
@@ -107,12 +107,12 @@
 <main>
 
 <div id="intro"><img src="assets/images_website/om_mig.jpg" srcset="assets/images_website/webp/om_mig.webp" alt="Billede af Psykolog Nina Hestbech" class="intro_img" loading="lazy"><h2>Lidt om mig</h2><p>Mit navn er Nina Helene Hestbech og jeg bor i en lille hyggelig 
-  lejlighed, på Amager. Jeg har en datter på 22 år og i min fritid holder jeg af at vinterbade, 
-  slappe af og så er jeg noget af en læsehest. Da jeg var helt lille, fik jeg skæld ud af 
-  bliotekaren, fordi hun ikke synes at jeg skulle låne så mange bøger, hvis jeg ikke 
+  lejlighed på Amager. Jeg har en datter på 22 år og i min fritid holder jeg af at vinterbade, 
+  slappe af og så er jeg lige af en læsehest. Da jeg var helt lille, fik jeg skæld ud af 
+  bibliotekar, fordi hun ikke syntes at jeg skulle låne så mange bøger, hvis jeg ikke 
   kunne nå at læse dem. Men det havde jeg altså. Jeg har også en kolonihave på Islands Brygge, hvor jeg især bruger tid om sommeren.
   <br><br>
-  Jeg har været psykolog siden 1999 hvor jeg afsluttede min kanditat og fik titlen Cand.Psyk fra Århus Universitet, så det har jeg snart været i 25 år. Min karriere har dog udviklet sig en del de seneste mange år og i 2014 fik jeg ydrenummer i Valby, som jeg har haft lige siden. Derudover, har jeg i et længere stykket tid fundet en interesse i de lidt mere alternative terapiteknikker og -metoder, såsom ACT(acceptance and commitment therapy) og mindfulness, som jeg bruger en masse i mit psykologarbejde, samt i mit personlige liv. Jeg går og drømmer om at hjælpe middelaldrende kvinder, som mig selv, med de problematikker og udfordrende situationer, som midvejsperioden, nu bringer med sig, og det er der min passion ligger. Og så skal jeg til maj starte på en ny spænende uddanelse med et Buddistisk fokus i Norden’s største Buddistiske center, så det glæder jeg mig rigtig meget til.</p></div>
+  Jeg har været psykolog siden 1999, hvor jeg afsluttede min kanditat og fik titlen Cand.Psyk fra Århus Universitet, så det har jeg snart været i 25 år. Min karriere har dog udviklet sig en del de seneste mange år og i 2014 fik jeg ydernummer i Valby, som jeg har haft lige siden. Derudover har jeg i et længere stykke tid fundet interesse i de lidt mere alternative terapiteknikker og -metoder, såsom ACT og mindfulness, som jeg bruger en masse i mit psykologarbejde, samt i mit personlige liv. Jeg går og drømmer om at hjælpe midaldrende kvinder, som mig selv, med de problematikker og udfordrende situationer, som midtvejsperioden, nu bringer med sig, og det er der min passion ligger. Og så skal jeg til maj starte på en ny spændende uddannelse med et Buddistisk fokus i Norden’s største Buddistiske center, så det glæder jeg mig rigtig meget til.</p></div>
 <div id="cv">
   <div id="leftelements">
 <div class="box_left1"><p>Arbejde i biograf i odense - 1984-1985</p><div class="streg"></div></div>
@@ -134,7 +134,7 @@
 <div class="box_right6"><div class="streg"></div><p>2014- Nutid - Ydernummer i Valby, kan tage imod klienter med henvisning fra egen læge</p></div>
   </div>
 </div>
-<div id="reflektion"><h2>25 år som psykolog</h2><p>I fremtiden vil min praksis højst sandsynligt tage mere inspiration fra det buddistiske og meditative, fordi det interesserer mig så meget. Jeg tror at den danske psykologverden vil se mere gruppeterapi og fællesskab, fordi står klart at det er noget at det vi alle går og savner. Personligt, håber jeg på selv at få mere nærvær og tid i min hverdag og måske fremtiden vil byde på en podcast eller lignende. Jeg håber på at samle endnu flere redskaber der kan hjælpe mine klienter igennem deres svære tider og mon ikke de vil lære mig en hel den anden vej også. </p>
+<div id="reflektion"><h2>25 år som psykolog</h2><p>I fremtiden vil min praksis højst sandsynligt tage mere inspiration fra det buddistiske og meditative, fordi det interesserer mig så meget. Jeg tror, at den danske psykologverden vil se mere gruppeterapi og fællesskab, fordi det står klart, at det er noget af det, vi alle går og savner. Personligt håber jeg på, selv at få mere nærvær og tid i min hverdag, og måske fremtiden vil byde på en podcast eller lignende. Jeg håber på at samle endnu flere redskaber, der kan hjælpe mine klienter igennem deres svære tider og mon ikke de vil lære mig en hel den anden vej også. </p>
 </div>
 <div id="kontakt"><div class="kontakt_text"><h2>Kontakt</h2>      <p>
   Psykolog Nina Hestbech
@@ -145,7 +145,7 @@
   <br>
   admin@psykologninahestbech.dk
   <br><br>
-  Høfdingsvej 34
+  Høffdingsvej 34
   <br>
   2500 Valby
   <br>
@@ -177,7 +177,7 @@
           <h3>Adresse</h3>
           <p>
 
-            Høfdingsvej 34
+            Høffdingsvej 34
             <br>
             2500 Valby
             <br>
@@ -186,7 +186,7 @@
           <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2154.0959230201665!2d12.504676315685627!3d55.65750600680566!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x465253ed73da190b%3A0x63d843aca3ba635b!2sPSYKOLOGHUSET%20Hestbech!5e1!3m2!1sen!2sdk!4v1638799609212!5m2!1sen!2sdk" width="300" height="250" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
         </div>
         <div id="credentials_box">
-          <h3>Certificeringer</h3>
+          <h3>Medlem af</h3>
           <img
           id="dpf_logo"
           src="assets/images_website/DAF-logo.png" srcset="assets/images_website/webp/DAF-logo.webp"
