--- a/praktisk.html
+++ b/praktisk.html
@@ -83,7 +83,7 @@
                     <a class="dropdown-item" href="praktisk.html#afbestilling">Afbestilling</a>
                   </li>
                   <li>
-                    <a class="dropdown-item" href="praktisk.html#utilsigtet">Utilsigtede hendelser</a>
+                    <a class="dropdown-item" href="praktisk.html#utilsigtet">Utilsigtede hændelser</a>
                   </li>
                   <li>
                     <a class="dropdown-item" href="om_mig.html#kontakt">Kontakt</a>
@@ -113,7 +113,7 @@
   Som <b>medlem af Danmark</b> kan man ofte få <b>200 kr. i refusion</b> pr. samtale.
   <br><br>
   Din almindelige forsikring eller sundhedsforsikring kan i nogle tilfælde dække behandling. Det er en god idé at undersøge dette, før du vælger en psykolog, da forsikringsselskaberne ofte kræver, at man vælger en af deres egne psykologer.</p></div>
-<div id="ventetid"><h2>Ventetid</h2><p>Grundet det begrænsede antal af ydrenummre der bliver uddelt i regionerne, samt den stigende interesse i psykologsamtaler, kan ventetiden være ret lang på samtaler via henvisning. Det oplever rigtig mange danske psykologer, men det skal siges at det selvfølgelig altid er muligt at få tid hos en psykolog som selvbetalende. 
+<div id="ventetid"><h2>Ventetid</h2><p>Grundet det begrænsede antal af ydernumre der bliver uddelt i regionerne, samt den stigende interesse i psykologsamtaler, kan ventetiden være ret lang på samtaler via henvisning. Det oplever rigtig mange danske psykologer, men det skal siges at det selvfølgelig altid er muligt at få tid hos en psykolog som selvbetalende. 
 <br><br>
   Ventetiden til samtale med henvisning og pt <b>mellem 6 og 8 uger</b>.</p></div>
 <div id="online"><h2>Online terapi</h2><p>Synes man, grundet Corona eller andet, at det er rarest at <b>afholde samtalerne online</b>, er der mulighed for det. Regionen har udviklet <b>en online platform</b> for danske psykologer, der er både <b>sikker og brugervenlig</b> og som gør det muligt at afholde psykologsamtaler, med både <b>lyd og video</b>. </p></div>
@@ -165,7 +165,7 @@
           <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2154.0959230201665!2d12.504676315685627!3d55.65750600680566!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x465253ed73da190b%3A0x63d843aca3ba635b!2sPSYKOLOGHUSET%20Hestbech!5e1!3m2!1sen!2sdk!4v1638799609212!5m2!1sen!2sdk" width="300" height="250" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
         </div>
         <div id="credentials_box">
-          <h3>Certificeringer</h3>
+          <h3>Medlem af</h3>
           <img
             id="dpf_logo"
             src="assets/images_website/DAF-logo.png" srcset="assets/images_website/webp/DAF-logo.webp"
