--- a/blog.html
+++ b/blog.html
@@ -83,7 +83,7 @@
                     <a class="dropdown-item" href="praktisk.html#afbestilling">Afbestilling</a>
                   </li>
                   <li>
-                    <a class="dropdown-item" href="praktisk.html#utilsigtet">Utilsigtede hendelser</a>
+                    <a class="dropdown-item" href="praktisk.html#utilsigtet">Utilsigtede hændelser</a>
                   </li>
                   <li>
                     <a class="dropdown-item" href="om_mig.html#kontakt">Kontakt</a>
@@ -105,7 +105,7 @@
 
 
 <main>
-<div id="intro"><h2>Velkommen til min blog!</h2><p>Her kan du finde lidt tanker og reflektioner om nogle af de nye og gamle metoder, redskaber, teorier og tendenser indenfor psykologverdenen. Forhåbenligt, kan du spejle dig i nogle af de nedenstående blogindlæg og selvom der næppe findes en “how to”-guide eller “fix it”-løsning til psyken, så kan det være at der alligevel dukker nogle pointer op, som du kan tage med dig.
+<div id="intro"><h2>Velkommen til min blog!</h2><p>Her kan du finde lidt tanker og refleksioner om nogle af de nye og gamle metoder, redskaber, teorier og tendenser indenfor psykologverdenen. Forhåbenligt, kan du spejle dig i nogle af de nedenstående blogindlæg og selvom der næppe findes en “how to”-guide eller “fix it”-løsning til psyken, så kan det være at der alligevel dukker nogle pointer op, som du kan tage med dig.
 <br><br>
   Glædelig læselyst!</p></div>
 
@@ -127,7 +127,7 @@
       <h5>3 ting at vide om skam</h5></div></a>
       <a href="blogpost2.html"><div class="blogpost">
         <div class="img_div"><img src="assets/images_website/corona.jpg" srcset="assets/images_website/webp/corona.webp" alt="Illustration af person i isolation" loading="lazy"></div>
-        <h5>7 råd til at komme igennem coronapandemien</h5></div></a>
+        <h5>6 råd til at komme igennem coronapandemien</h5></div></a>
     </div>
   
   <a href="" class="blog_se_flere" onclick="alert('Det er bare en dummy knap:) men læs gerne de seks blogindlæg ovenfor! Hav en dejlig dag')">Se flere</a>
@@ -169,7 +169,7 @@
           <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2154.0959230201665!2d12.504676315685627!3d55.65750600680566!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x465253ed73da190b%3A0x63d843aca3ba635b!2sPSYKOLOGHUSET%20Hestbech!5e1!3m2!1sen!2sdk!4v1638799609212!5m2!1sen!2sdk" width="300" height="250" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
         </div>
         <div id="credentials_box">
-          <h3>Certificeringer</h3>
+          <h3>Medlem af</h3>
           <img
             id="dpf_logo"
             src="assets/images_website/DAF-logo.png" srcset="assets/images_website/webp/DAF-logo.webp"
