--- a/blogpost2.html
+++ b/blogpost2.html
@@ -86,7 +86,7 @@
                     <a class="dropdown-item" href="praktisk.html#afbestilling">Afbestilling</a>
                   </li>
                   <li>
-                    <a class="dropdown-item" href="praktisk.html#utilsigtet">Utilsigtede hendelser</a>
+                    <a class="dropdown-item" href="praktisk.html#utilsigtet">Utilsigtede hændelser</a>
                   </li>
                   <li>
                     <a class="dropdown-item" href="om_mig.html#kontakt">Kontakt</a>
@@ -110,7 +110,7 @@
 <main>
 
     <div id="hero"><img src="assets/images_website/corona.jpg" srcset="assets/images_website/webp/corona.webp" alt="Illustration af person i isolation" loading="lazy"></div>
-   <div id="wrapper"> <div id="post_text"><h2>7 råd til at komme igennem coronapandemien</h2>
+   <div id="wrapper"> <div id="post_text"><h2>6 råd til at komme igennem coronapandemien</h2>
         <h5>Af Nina H. Hestbech</h5>
         <p class="content_text">Vi er nok alle enige om, at den mulige udsigt til mere isolation igen pga
             corona, er en udfordring. Mange af os har tidligere kæmpet med følelser af
@@ -194,7 +194,7 @@
           <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2154.0959230201665!2d12.504676315685627!3d55.65750600680566!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x465253ed73da190b%3A0x63d843aca3ba635b!2sPSYKOLOGHUSET%20Hestbech!5e1!3m2!1sen!2sdk!4v1638799609212!5m2!1sen!2sdk" width="300" height="250" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
         </div>
         <div id="credentials_box">
-          <h3>Certificeringer</h3>
+          <h3>Medlem af</h3>
           <img
           id="dpf_logo"
           src="assets/images_website/DAF-logo.png" srcset="assets/images_website/webp/DAF-logo.webp"
