--- a/blogpost4.html
+++ b/blogpost4.html
@@ -83,7 +83,7 @@
                     <a class="dropdown-item" href="praktisk.html#afbestilling">Afbestilling</a>
                   </li>
                   <li>
-                    <a class="dropdown-item" href="praktisk.html#utilsigtet">Utilsigtede hendelser</a>
+                    <a class="dropdown-item" href="praktisk.html#utilsigtet">Utilsigtede hændelser</a>
                   </li>
                   <li>
                     <a class="dropdown-item" href="om_mig.html#kontakt">Kontakt</a>
@@ -110,7 +110,7 @@
    <div id="wrapper"> <div id="post_text"><h2>Ny bog fra Brene Brown: Atlas of The Heart</h2>
         <h5>Af Nina H. Hestbech</h5>
         <p class="content_text">
-            Dr. Brene Brown er forker i skam og sårbarhed og udover at have været nævnt flere gange her på bloggen, er hun efterhånden velkendt efter hendes show på Netflix blev en kæmpe success og oprettede en ny kategori på streamingtjenesten; en blanding af comedy møder et ekspertoplæg.
+            Dr. Brene Brown er forsker i skam og sårbarhed og udover at have været nævnt flere gange her på bloggen, er hun efterhånden velkendt efter hendes show på Netflix blev en kæmpe success og oprettede en ny kategori på streamingtjenesten; en blanding af comedy møder et ekspertoplæg.
 <br><br>
 Og nu har hun altså udgivet en ny bog: Atlas of The Heart.
 Den glæder jeg mig rigtig meget til at læse og jeg har oplevet flere af mine klienter snakke om hendes podcasts og bøger, som fortæller at de har hjulpet dem en masse, ligesom de også har gjort indtryk på mig.
@@ -175,7 +175,7 @@ Kærlig hilsen, Nina
           <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2154.0959230201665!2d12.504676315685627!3d55.65750600680566!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x465253ed73da190b%3A0x63d843aca3ba635b!2sPSYKOLOGHUSET%20Hestbech!5e1!3m2!1sen!2sdk!4v1638799609212!5m2!1sen!2sdk" width="300" height="250" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
         </div>
         <div id="credentials_box">
-          <h3>Certificeringer</h3>
+          <h3>Medlem af</h3>
           <img
           id="dpf_logo"
           src="assets/images_website/DAF-logo.png" srcset="assets/images_website/webp/DAF-logo.webp"
